update 1.20.6